// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConSfondo 1`] = `
<div>
  <div
    class="it-hero-wrapper"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConSfondoMargineNegativo 1`] = `
<div>
  <div
    class="it-hero-wrapper it-bottom-overlapping-content"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="it-hero-text-wrapper bg-dark"
          >
            <span
              class="it-category"
            >
              Category
            </span>
            <h1
              class=""
            >
              Heading lorem ipsum dolor sit amet, consetetur sadipscing.
            </h1>
            <p
              class="d-none d-lg-block"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
            <div
              class="it-btn-container"
            >
              <button
                class="btn btn-secondary btn-sm"
              >
                Label button
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="card-wrapper card-space"
        >
          <div
            class="card-bg card"
          >
            <div
              class="card-body"
            >
              <h5
                class="big-heading card-title"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit…
              </h5>
              <p
                class="card-text"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              <span
                class="card-signature"
              >
                di Federico De Paolis
              </span>
              <a
                class="read-more"
              >
                <span
                  class="text"
                >
                  Leggi di più
                </span>
                <svg
                  class="icon"
                  enable-background="new 0 0 24 24"
                  role="img"
                  viewBox="0 0 24 24"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    icon
                  </title>
                  <path
                    d="m13.9 5.4-.7.7 5.3 5.4H3v1h15.5l-5.3 5.4.7.7 6.6-6.6-6.6-6.6z"
                  />
                </svg>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConSfondoOverlayFiltro 1`] = `
<div>
  <div
    class="it-hero-wrapper it-overlay it-filter"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConSfondoSmall 1`] = `
<div>
  <div
    class="it-hero-wrapper it-hero-small-size"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConTesto 1`] = `
<div>
  <div
    class="it-hero-wrapper"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="it-hero-text-wrapper bg-dark"
          >
            <span
              class="it-category"
            >
              Category
            </span>
            <h1
              class=""
            >
              Heading lorem ipsum dolor sit amet, consetetur sadipscing.
            </h1>
            <p
              class="d-none d-lg-block"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
            <div
              class="it-btn-container"
            >
              <button
                class="btn btn-outline-primary btn-sm"
              >
                Label button
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConTestoCentrato 1`] = `
<div>
  <div
    class="it-hero-wrapper it-text-centered"
  >
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="it-hero-text-wrapper bg-dark"
          >
            <span
              class="it-category"
            >
              Category
            </span>
            <h1
              class=""
            >
              Heading lorem ipsum dolor sit amet, consetetur sadipscing.
            </h1>
            <p
              class="d-none d-lg-block"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
            <div
              class="it-btn-container"
            >
              <button
                class="btn btn-outline-primary btn-sm"
              >
                Label button
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConTestoSuSfondo 1`] = `
<div>
  <div
    class="it-hero-wrapper it-overlay it-dark"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="it-hero-text-wrapper bg-dark"
          >
            <span
              class="it-category"
            >
              Category
            </span>
            <h1
              class=""
            >
              Heading lorem ipsum dolor sit amet, consetetur sadipscing.
            </h1>
            <p
              class="d-none d-lg-block"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
            <div
              class="it-btn-container"
            >
              <button
                class="btn btn-secondary btn-sm"
              >
                Label button
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Snapshots Documentazione/Menu di navigazione/Hero HeroConTestoSuSfondoOverlayPrimario 1`] = `
<div>
  <div
    class="it-hero-wrapper it-overlay it-primary"
  >
    <div
      class="img-responsive-wrapper"
    >
      <div
        class="img-responsive"
      >
        <div
          class="img-wrapper"
        >
          <img
            alt="imagealt"
            src="https://animals.sandiegozoo.org/sites/default/files/2016-08/animals_hero_mountains.jpg"
            title="image title"
          />
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="it-hero-text-wrapper bg-dark"
          >
            <span
              class="it-category"
            >
              Category
            </span>
            <h1
              class=""
            >
              Heading lorem ipsum dolor sit amet, consetetur sadipscing.
            </h1>
            <p
              class="d-none d-lg-block"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
            <div
              class="it-btn-container"
            >
              <button
                class="btn btn-outline-primary btn-sm"
              >
                Label button
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
